--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.1.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
     "less-loader": "^5.0.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
